# basic_api

./: pyproject.toml
app/: configs.py  dependencies.py  main.py  untils.py
app/internal/: admin.py  configs.py  untils.py
app/internal/authentication/: auth.py
app/internal/models/: __base.py  __create_tables.py  __models.py  __populate_users.py  auth_group.py  auth_permission.py  auth_users_groups.py  group.py  permission.py  permissions_groups.py  user.py  users_groups.py
app/internal/routers/: group.py  user.py
app/internal/schemas/: group.py  user.py  user_groups.py
app/models/: __base.py  __create_tables.py  __models.py  __populate_db.py  auth_group.py  auth_permission.py  auth_users_groups.py  permissions.py  populate_db.py  user.py
app/routers/: user.py
app/schemas/: user.py
